[gd_scene load_steps=11 format=3 uid="uid://dqebxa0t04n3g"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_vp8qg"]
[ext_resource type="Texture2D" uid="uid://bdr4w3sppdfkw" path="res://Player/back1.png" id="2_fvvp3"]
[ext_resource type="Texture2D" uid="uid://csrxauf8kxg7b" path="res://Player/back2.png" id="3_gnka6"]
[ext_resource type="Texture2D" uid="uid://cut67vxsi2qxr" path="res://Player/front1.png" id="4_pmeqy"]
[ext_resource type="Texture2D" uid="uid://ctksmpw3fplo4" path="res://Player/front2.png" id="5_ealuc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dg46x"]
radius = 16.0
height = 48.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yiqi3"]
radius = 32.0

[sub_resource type="SpriteFrames" id="SpriteFrames_koee2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fvvp3")
}, {
"duration": 1.0,
"texture": ExtResource("3_gnka6")
}],
"loop": true,
"name": &"back",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_pmeqy")
}, {
"duration": 1.0,
"texture": ExtResource("5_ealuc")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ebsf"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gefod"]
bg_color = Color(1, 0, 0, 1)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_vp8qg")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dg46x")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-2, 2)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yiqi3")

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false

[node name="Sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_koee2")

[node name="Control" type="MarginContainer" parent="."]
visible = false
custom_minimum_size = Vector2(32, 4)
offset_left = -22.0
offset_top = -37.0
offset_right = 18.0
offset_bottom = 3.0

[node name="ThrowPower" type="ProgressBar" parent="Control"]
custom_minimum_size = Vector2(32, 4)
layout_direction = 2
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 1
theme_override_styles/background = SubResource("StyleBoxFlat_8ebsf")
theme_override_styles/fill = SubResource("StyleBoxFlat_gefod")
max_value = 10.0
step = 0.5
show_percentage = false

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
